--- a/Space Invaders/Space Invaders.vcxproj
+++ b/Space Invaders/Space Invaders.vcxproj
@@ -85,6 +85,7 @@
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Level.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MysteryShip.cpp" />
     <ClCompile Include="PlayerProjectile.cpp" />
     <ClCompile Include="PlayerShip.cpp" />
     <ClCompile Include="Sprite.cpp" />
@@ -97,6 +98,7 @@
     <ClInclude Include="Entity.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Level.h" />
+    <ClInclude Include="MysteryShip.h" />
     <ClInclude Include="PlayerProjectile.h" />
     <ClInclude Include="PlayerShip.h" />
     <ClInclude Include="resource.h" />
