--- a/Space Invaders/Space Invaders.vcxproj.filters
+++ b/Space Invaders/Space Invaders.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="PlayerProjectile.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MysteryShip.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Alien.h">
@@ -84,6 +87,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="PlayerProjectile.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MysteryShip.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
