--- a/Space Invaders/Space Invaders.vcxproj.filters
+++ b/Space Invaders/Space Invaders.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="MainMenu.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Barrier.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Alien.h">
@@ -96,6 +99,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="MainMenu.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Barrier.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -153,5 +159,61 @@
     <Image Include="Sprite_PlayerShip.bmp">
       <Filter>Resource Files</Filter>
     </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\MaskA_Alien1.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Assets\MaskA_Alien2.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Assets\MaskA_Alien3.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Assets\MaskA_Bolt.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Assets\MaskA_Cross.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Assets\MaskA_MysShip.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Assets\Mask_Barrier.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Assets\Mask_PlayerShip.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Assets\Mask_Projectile.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Assets\SpriteA_Alien1.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Assets\SpriteA_Alien2.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Assets\SpriteA_Alien3.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Assets\SpriteA_Bolt.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Assets\SpriteA_Cross.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Assets\SpriteA_MysShip.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Assets\Sprite_Barrier.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Assets\Sprite_PlayerShip.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Assets\Sprite_Projectile.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
