--- a/Space Invaders/Space Invaders.vcxproj.filters
+++ b/Space Invaders/Space Invaders.vcxproj.filters
@@ -54,6 +54,12 @@
     <ClCompile Include="MainMenu.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Barrier.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="AlienProjectile.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Alien.h">
@@ -96,6 +102,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="MainMenu.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Barrier.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AlienProjectile.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -153,5 +165,79 @@
     <Image Include="Sprite_PlayerShip.bmp">
       <Filter>Resource Files</Filter>
     </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\MaskA_Alien1.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Assets\MaskA_Alien2.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Assets\MaskA_Alien3.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Assets\MaskA_Bolt.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Assets\MaskA_Cross.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Assets\MaskA_MysShip.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Assets\Mask_Barrier.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Assets\Mask_PlayerShip.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Assets\Mask_Projectile.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Assets\SpriteA_Alien1.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Assets\SpriteA_Alien2.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Assets\SpriteA_Alien3.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Assets\SpriteA_Bolt.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Assets\SpriteA_Cross.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Assets\SpriteA_MysShip.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Assets\Sprite_Barrier.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Assets\Sprite_PlayerShip.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Assets\Sprite_Projectile.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="D:\Users\Callan.Moore\Desktop\Barrier Phase 1.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="D:\Users\Callan.Moore\Desktop\Barrier Phase 2.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="D:\Users\Callan.Moore\Desktop\Barrier Phase 3.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="D:\Users\Callan.Moore\Desktop\Barrier Phase 4.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="D:\Users\Callan.Moore\Desktop\Barrier Phase 5.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="D:\Users\Callan.Moore\Desktop\Barrier Phase 6.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
