--- a/Space Invaders/Space Invaders.vcxproj.filters
+++ b/Space Invaders/Space Invaders.vcxproj.filters
@@ -129,9 +129,6 @@
     <None Include="Assets\Mask_Projectile.bmp">
       <Filter>Resource Files</Filter>
     </None>
-    <None Include="Assets\Mask_Title.bmp">
-      <Filter>Resource Files</Filter>
-    </None>
     <None Include="Assets\MaskA_Alien1.bmp">
       <Filter>Resource Files</Filter>
     </None>
@@ -156,9 +153,6 @@
     <None Include="Assets\Sprite_Projectile.bmp">
       <Filter>Resource Files</Filter>
     </None>
-    <None Include="Assets\Sprite_Title.bmp">
-      <Filter>Resource Files</Filter>
-    </None>
     <None Include="Assets\SpriteA_Alien1.bmp">
       <Filter>Resource Files</Filter>
     </None>
@@ -177,5 +171,73 @@
     <None Include="Assets\SpriteA_MysShip.bmp">
       <Filter>Resource Files</Filter>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="MaskA_Alien1.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="MaskA_Alien2.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="MaskA_Alien3.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="MaskA_Bolt.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="MaskA_Cross.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="MaskA_MysShip.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Mask_PlayerShip.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Mask_Projectile.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="SpriteA_Alien1.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="SpriteA_Alien2.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="SpriteA_Alien3.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="SpriteA_Bolt.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="SpriteA_Cross.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="SpriteA_MysShip.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Sprite_PlayerShip.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Sprite_Projectile.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Assets\Mask_Title.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Assets\Sprite_Title.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Assets\Mask_Start.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Assets\Mask_Exit.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Assets\Sprite_Exit.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Assets\Sprite_Start.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
