--- a/Space Invaders/Space Invaders.vcxproj.filters
+++ b/Space Invaders/Space Invaders.vcxproj.filters
@@ -215,5 +215,29 @@
     <Image Include="Assets\Sprite_Start.bmp">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="MaskA_Alien2.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="MaskA_Bolt.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="MaskA_Cross.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="MaskA_MysShip.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Mask_PlayerShip.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Mask_Projectile.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="SpriteA_Alien1.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Sprite_Projectile.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
